--- a/BikeSharing/Map/Map.storyboard
+++ b/BikeSharing/Map/Map.storyboard
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yop-q3-yiZ">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
                             </mapView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8qo-3j-xX0" customClass="BikeInfoView" customModule="BikeSharing" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="193"/>
@@ -39,6 +39,8 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="90K-mv-of4"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Карта" image="MapShape" id="MIF-3u-PZt"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="bikeInfoView" destination="8qo-3j-xX0" id="D3p-zU-zZ4"/>
                         <outlet property="mapView" destination="yop-q3-yiZ" id="HoW-gH-tAw"/>
@@ -72,13 +74,24 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y1o-jS-1Ee">
+                                <rect key="frame" x="322" y="75.5" width="60" height="30"/>
+                                <state key="normal" title="Помощь">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="help:" destination="jea-ms-1YW" eventType="touchUpInside" id="Z5Z-zh-gKo"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="Y1o-jS-1Ee" firstAttribute="centerY" secondItem="sK7-Bp-xsT" secondAttribute="centerY" id="CwA-QW-cdN"/>
                             <constraint firstItem="fGS-Lz-B0T" firstAttribute="bottom" secondItem="nhN-G6-faS" secondAttribute="bottom" constant="40" id="I0k-EL-3dg"/>
                             <constraint firstItem="nhN-G6-faS" firstAttribute="centerX" secondItem="fGS-Lz-B0T" secondAttribute="centerX" id="S7R-tT-cZX"/>
                             <constraint firstItem="sK7-Bp-xsT" firstAttribute="leading" secondItem="fGS-Lz-B0T" secondAttribute="leading" constant="16" id="l84-mA-7At"/>
                             <constraint firstItem="sK7-Bp-xsT" firstAttribute="top" secondItem="fGS-Lz-B0T" secondAttribute="top" constant="16" id="slE-3m-VgI"/>
+                            <constraint firstItem="fGS-Lz-B0T" firstAttribute="trailing" secondItem="Y1o-jS-1Ee" secondAttribute="trailing" constant="32" id="yzF-Qn-l61"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="fGS-Lz-B0T"/>
                     </view>
@@ -176,6 +189,7 @@
     </scenes>
     <resources>
         <image name="BikeIcon" width="25.5" height="17.5"/>
+        <image name="MapShape" width="26.666666030883789" height="26"/>
         <namedColor name="Background">
             <color red="0.30000001192092896" green="0.30000001192092896" blue="0.30000001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
