--- a/BikeSharing/Rides/Rides.storyboard
+++ b/BikeSharing/Rides/Rides.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="250" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jRM-ES-F0x">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="rideCell" id="Noi-px-Imy" customClass="RideTableViewCell" customModule="BikeSharing" customModuleProvider="target">
@@ -116,7 +116,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="D3c-vv-5Tt"/>
                     </view>
-                    <navigationItem key="navigationItem" id="T6t-Kf-EKL"/>
+                    <navigationItem key="navigationItem" title="Поездки" id="T6t-Kf-EKL"/>
                     <connections>
                         <outlet property="tableView" destination="jRM-ES-F0x" id="Ono-Yq-W5H"/>
                     </connections>
@@ -129,10 +129,13 @@
         <scene sceneID="ByO-0r-WcH">
             <objects>
                 <navigationController title="Rides" automaticallyAdjustsScrollViewInsets="NO" id="YCA-bz-OlI" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Поездки" image="Feed" id="hmc-BP-ctH"/>
                     <toolbarItems/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="tho-df-hNz">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -145,6 +148,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Feed" width="20" height="22"/>
         <image name="MapMarker" width="24" height="41"/>
         <image name="map" width="353" height="190"/>
     </resources>
