--- a/BikeSharing/Account/Accounts.storyboard
+++ b/BikeSharing/Account/Accounts.storyboard
@@ -6,6 +6,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -29,8 +31,8 @@
                                         <constraint firstAttribute="width" secondItem="zcw-Ro-YIo" secondAttribute="height" id="Vk5-ts-B7g"/>
                                     </constraints>
                                 </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Леонид Лядвейкин" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eBO-ae-Qvp">
-                                    <rect key="frame" x="112" y="45.5" width="152.5" height="21"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Имя" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eBO-ae-Qvp">
+                                    <rect key="frame" x="112" y="45.5" width="33.5" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
@@ -114,7 +116,7 @@
                             <outlet property="delegate" destination="x4Q-bA-Swf" id="Pi5-B3-b2f"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="c0L-0y-p2G"/>
+                    <navigationItem key="navigationItem" title="Аккаунт" id="c0L-0y-p2G"/>
                     <connections>
                         <outlet property="avatarImage" destination="zcw-Ro-YIo" id="Eo3-6P-sLA"/>
                         <outlet property="nameLabel" destination="eBO-ae-Qvp" id="iTk-cp-PaK"/>
@@ -123,6 +125,139 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KCc-zd-7Kp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="746.37681159420299" y="120.53571428571428"/>
+        </scene>
+        <!--Способ оплаты-->
+        <scene sceneID="KuW-Rg-tWH">
+            <objects>
+                <tableViewController storyboardIdentifier="PaymentMethodController" title="Способ оплаты" id="lYh-e9-AY7" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="CQR-84-Zew">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" name="Background"/>
+                        <sections>
+                            <tableViewSection id="NvL-Lx-kno">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="Xzu-Ah-bAT" style="IBUITableViewCellStyleDefault" id="O3j-jP-ag0">
+                                        <rect key="frame" x="0.0" y="35" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="O3j-jP-ag0" id="ldt-Lo-l0c">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Apple pay" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Xzu-Ah-bAT">
+                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <color key="backgroundColor" name="Background"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" name="Background"/>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="lYh-e9-AY7" id="w80-Jz-ddL"/>
+                            <outlet property="delegate" destination="lYh-e9-AY7" id="bSY-BZ-eQQ"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oXC-in-U65" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1412" y="868"/>
+        </scene>
+        <!--Feedback View Controller-->
+        <scene sceneID="TDv-Hu-JHu">
+            <objects>
+                <viewController storyboardIdentifier="FeedbackController" id="RmU-x4-X8K" customClass="FeedbackViewController" customModule="BikeSharing" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vs8-pa-opv">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HMC-ib-Ggr">
+                                <rect key="frame" x="16" y="89" width="382" height="30"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wyw-V7-QUS">
+                                <rect key="frame" x="16" y="164" width="382" height="30"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Номер велосипеда" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oyX-4w-zNB">
+                                <rect key="frame" x="16" y="60" width="153.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Местоппложение" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mgl-nG-iWC">
+                                <rect key="frame" x="16" y="135" width="140.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Xjg-nI-w6L">
+                                <rect key="frame" x="16" y="239" width="382" height="545"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K1v-Mq-fI6" customClass="BSButton" customModule="BikeSharing" customModuleProvider="target">
+                                <rect key="frame" x="16" y="800" width="382" height="30"/>
+                                <state key="normal" title="Отправить">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendFeedback:" destination="RmU-x4-X8K" eventType="touchUpInside" id="eID-2O-XHd"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Опишите проблему" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Pk-RI-AOT">
+                                <rect key="frame" x="16" y="210" width="158" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" name="Background"/>
+                        <constraints>
+                            <constraint firstItem="Xjg-nI-w6L" firstAttribute="top" secondItem="5Pk-RI-AOT" secondAttribute="bottom" constant="8" id="0EI-rH-A6y"/>
+                            <constraint firstItem="Xjg-nI-w6L" firstAttribute="leading" secondItem="wyw-V7-QUS" secondAttribute="leading" id="1fh-8I-euT"/>
+                            <constraint firstItem="mgl-nG-iWC" firstAttribute="top" secondItem="HMC-ib-Ggr" secondAttribute="bottom" constant="16" id="42Z-hY-jTK"/>
+                            <constraint firstItem="fn7-Lq-H7e" firstAttribute="trailing" secondItem="K1v-Mq-fI6" secondAttribute="trailing" constant="16" id="7ru-iT-jr2"/>
+                            <constraint firstItem="fn7-Lq-H7e" firstAttribute="trailing" secondItem="HMC-ib-Ggr" secondAttribute="trailing" constant="16" id="8bd-Le-h51"/>
+                            <constraint firstItem="wyw-V7-QUS" firstAttribute="leading" secondItem="mgl-nG-iWC" secondAttribute="leading" id="Euq-GM-RRX"/>
+                            <constraint firstItem="K1v-Mq-fI6" firstAttribute="top" secondItem="Xjg-nI-w6L" secondAttribute="bottom" constant="16" id="Ffk-IZ-Exb"/>
+                            <constraint firstItem="5Pk-RI-AOT" firstAttribute="leading" secondItem="wyw-V7-QUS" secondAttribute="leading" id="MkJ-cX-ea8"/>
+                            <constraint firstItem="oyX-4w-zNB" firstAttribute="leading" secondItem="HMC-ib-Ggr" secondAttribute="leading" id="Q6U-fz-t8R"/>
+                            <constraint firstItem="K1v-Mq-fI6" firstAttribute="leading" secondItem="fn7-Lq-H7e" secondAttribute="leading" constant="16" id="Ta4-D3-gWh"/>
+                            <constraint firstItem="wyw-V7-QUS" firstAttribute="top" secondItem="mgl-nG-iWC" secondAttribute="bottom" constant="8" id="X8I-q0-baE"/>
+                            <constraint firstItem="oyX-4w-zNB" firstAttribute="top" secondItem="fn7-Lq-H7e" secondAttribute="top" constant="16" id="bPj-EV-H2Z"/>
+                            <constraint firstItem="HMC-ib-Ggr" firstAttribute="leading" secondItem="fn7-Lq-H7e" secondAttribute="leading" constant="16" id="fDP-QS-dae"/>
+                            <constraint firstItem="fn7-Lq-H7e" firstAttribute="trailing" secondItem="wyw-V7-QUS" secondAttribute="trailing" constant="16" id="g9K-R0-h7Z"/>
+                            <constraint firstItem="fn7-Lq-H7e" firstAttribute="bottom" secondItem="K1v-Mq-fI6" secondAttribute="bottom" constant="32" id="ghA-8J-5h6"/>
+                            <constraint firstItem="Xjg-nI-w6L" firstAttribute="trailing" secondItem="wyw-V7-QUS" secondAttribute="trailing" id="omT-fV-04a"/>
+                            <constraint firstItem="HMC-ib-Ggr" firstAttribute="top" secondItem="oyX-4w-zNB" secondAttribute="bottom" constant="8" id="rYE-0b-ZGp"/>
+                            <constraint firstItem="5Pk-RI-AOT" firstAttribute="top" secondItem="wyw-V7-QUS" secondAttribute="bottom" constant="16" id="sFB-J5-Bna"/>
+                            <constraint firstItem="mgl-nG-iWC" firstAttribute="leading" secondItem="HMC-ib-Ggr" secondAttribute="leading" id="wDg-J5-4H2"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="fn7-Lq-H7e"/>
+                    </view>
+                    <connections>
+                        <outlet property="bikeNumberField" destination="HMC-ib-Ggr" id="gSw-Ap-ms0"/>
+                        <outlet property="feedbackTextView" destination="Xjg-nI-w6L" id="dcW-mH-YHX"/>
+                        <outlet property="placeField" destination="wyw-V7-QUS" id="Oip-SH-qMW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dht-Yj-wxq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2022" y="3"/>
         </scene>
         <!--Account-->
         <scene sceneID="LkQ-rz-QPs">
@@ -134,6 +269,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="5kg-WX-X0b">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -148,5 +287,8 @@
     <resources>
         <image name="Account" width="20" height="21"/>
         <image name="avatar-placeholder" width="300" height="250"/>
+        <namedColor name="Background">
+            <color red="0.30000001192092896" green="0.30000001192092896" blue="0.30000001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
