--- a/BikeSharing/Base.lproj/Main.storyboard
+++ b/BikeSharing/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qX3-kg-dRw">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -26,7 +26,7 @@
                                     <constraint firstAttribute="height" constant="32" id="jel-mY-iww"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ajY-vM-Z7a" customClass="FBLoginButton">
+                            <view contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ajY-vM-Z7a" customClass="FBSDKLoginButton">
                                 <rect key="frame" x="127" y="501" width="161" height="32"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -53,7 +53,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="fbLoginButton" destination="ajY-vM-Z7a" id="yOf-d0-KWu"/>
+                        <outlet property="fbLoginButton" destination="ajY-vM-Z7a" id="f32-w6-g7y"/>
                         <outlet property="googleLoginButton" destination="XpF-yT-KWB" id="41E-67-wiK"/>
                     </connections>
                 </viewController>
@@ -64,7 +64,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="2Ty-rb-2kZ">
             <objects>
-                <tabBarController id="qX3-kg-dRw" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBarVC" id="qX3-kg-dRw" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="HaQ-Hz-WFO">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
